force-app/main/default/objects/Book__c/fields/Date_Published__c.field-meta.xml
<CustomField>
    <fullName>Date_Published__c</fullName>
    <description>Date of first publication</description>
    <label>Date Published</label>
    <type>Date</type>
</CustomField>