force-app/main/default/objects/Book__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This describes the content or the description of the physical book</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>