force-app/main/default/objects/Book__c/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <description>This field gives the details about the copies of a book</description>
    <label>Edition</label>
    <length>30</length>
    <type>Text</type>
</CustomField>