force-app/main/default/objects/Book__c/fields/ISBN__c.field-meta.xml
<CustomField>
    <fullName>ISBN__c</fullName>
    <description>This field represents the International Standard Book Number, a numeric commercial book identifier which is intended to be unique</description>
    <label>ISBN</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>