force-app/main/default/objects/Book__c/validationRules/validateISBN.validationRule-meta.xml
<ValidationRule>
    <fullName>validateISBN</fullName>
    <active>true</active>
    <description>Check whether the ISBN only contains numbers.</description>
    <errorConditionFormula>NOT( ISNUMBER( ISBN__c ) &amp;&amp;  (LEN(ISBN__c)  = 13) )</errorConditionFormula>
    <errorMessage>Please enter a 13 digit ISBN</errorMessage>
</ValidationRule>